Update style.css - fix clock alignment

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ i {
 #clock {
     position: fixed;
     bottom: 15px;
-    right: 15px;
+    right: 45px;
     color: white;
     font-size: 32px;
 }
